# Mash_Graph

./: .gitmodules  README.md
task_1/: CMakeLists.txt  main.cpp
task_1/include/: indices.h  shader_loading.h  vertices.h
task_1/include/data/: cube.h  cube_indices.h  indices.h  vertices.h
task_1/include/libs/: buffers.h  init_opengl.h  object.h
task_1/include/shaders/: shader_creation.h  shader_io.h
task_1/src/: buffers.cpp  init_opengl.cpp  task_1.cpp
task_1/src/libs/: Bitmap.cpp  create_shaders.cpp  object.cpp  shader.cpp  shader_io.cpp
task_1/src/objects/: cube.ind
task_1/src/shaders/: shader_loading.cpp  vertex.glsl
task_1_c++/: Bitmap.cpp  CMakeLists.txt  build.sh  main.cpp
task_1_c++/include/: Bitmap.h  antialiasting.h  file_io.h  objects.h  scene.h
task_1_c++/src/: Bitmap.cpp  antialiasting.cpp  file_io.cpp  main.cpp  objects.cpp  scene.cpp
task_2/include/data/: vertices.h
task_2/include/libs/: init_opengl.h  object.h
task_2/include/shaders/: shader.h  shader_io.h
task_2/src/: buffers.cpp  init_opengl.cpp  task_1.cpp
task_2/src/libs/: object.cpp
task_2/src/objects/: cube.vrt
